# stitch_two

./: CMakeLists.txt  README.md  package.xml
include/stitch_two/: VideoLoader.h
launch/: stitch.launch
src/: VideoLoader.cpp  info_display.cpp  stitch.cpp
